# class-18

./: README.md
factorial/: .gitignore  Makefile.am  configure.ac  factorial.c  factorial.h  test_factorial.c
linear_algebra/: .gitignore  Makefile.am  configure.ac  large_matrix_vector_mul.c  linear_algebra.h  matrix.c  matrix_matrix_mul.c  matrix_vector_mul.c  matrix_vector_mul_f.F  message_openmp.c  print_matrix_fortran.F  test_average.c  test_average.gpl  test_average.sh  test_average_basic.c  test_average_fortran.F90  test_data_layout.c  test_data_layout_fortran.F  test_matrix_matrix_mul.c  test_matrix_vector_mul.c  test_openmp.c  test_vector_add.c  test_vector_dot.c  vector.c  vector_add.c  vector_dot.c
mpi/: .gitignore  Makefile.am  configure.ac  fld1d.c  fld1d.h  hello_mpi.c  hello_mpi_2.c  hello_mpi_3.c  hello_mpi_4.c  message_mpi.c  message_mpi_2.c  mpi_debug.h  test_derivative.c  test_integrate.c
